[tool.poetry]
name = "sc-mapmerge"
version = "1.2.1"
description = "Utility for merging stalcraft map into single image"
authors = ["onejeuu <bloodtrail@beber1k.ru>"]
license = "MIT"
packages = [{ include = "scmapmerge" }]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
pillow = "^10.0.0"
rich = "^13.0.0"
sc-file = "^1.0.0"
click = "^8.1.0"

[tool.poetry.scripts]
build = "build:build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
